fix: overflow

--- a/src/style.css
+++ b/src/style.css
@@ -4,3 +4,9 @@
   box-sizing: border-box;
   font-family: "Inter", sans-serif;
 }
+
+html,
+body {
+  overflow-x: hidden;
+  width: 100%;
+}
